Bug 1594283 - part 1: Remove nsIDocShell::GetSameTypeRootTreeItemIgnoreBrowserBoundaries(). r=kmag

Differential Revision: https://phabricator.services.mozilla.com/D67352